# AoC_2024

./: .gitignore  README.md
bhavesh/: code-moved.md
bhavesh/haskell/: CHANGELOG.md  README.md  advent-of-code-haskell.cabal
bhavesh/python/: Day05.py  Day10.py  Day15.py  Day16.py  Day18.py
damien/day1/: day1.asm  justfile
damien/day2/: day2.cabal  package.yaml
deanddm/: AOC2024.csproj  AOC2024.sln  Common.cs  Day1.cs  Day10.cs  Day11.cs  Day12.cs  Day13.cs  Day14.cs  Day15.cs  Day16.cs  Day17.cs  Day18.cs  Day19.cs  Day2.cs  Day20.cs  Day3.cs  Day4.cs  Day5.cs  Day6.cs  Day7.cs  Day8.cs  Day9.cs  Program.cs
francois/: .gitignore  README.md
francois/AdventOfCode/: Day01.cs  Day02.cs  Day03.cs  Day04.cs  Day05.cs  Day06.cs  Day07.cs  Day08.cs  Day09.cs  Day10.cs  Day11.cs  Day12.cs  Day13.cs  Day14.cs  Day15.cs  Day16.cs  Day17.cs  Day18.cs  Day19.cs  Day20.cs  Day21.cs  Day22.cs  Day23.cs  Day24.cs  Day25.cs  Utilities.cs
liad/: welcome.md
liad/haskell/: LICENSE  haskell.cabal
marais/day-1/: run.py
marais/day-10/: run.py
marais/day-11/: run.py
marais/day-12/: run.py  run2.py
marais/day-2/: run.py
marais/day-3/: run.py
marais/day-4/: run.py
marais/day-5/: run.py
marais/day-6/: run.py
marais/day-7/: run.py
marais/day-8/: run.py
marais/day-9/: run.py
marcin/: .gitignore
marcin/dotnet/: .env  AdventSolver.cs  AoC2024.csproj  (+29 more)
matt/: CHANGELOG.md  LICENSE  matt.cabal
tjaard/: aoc.cabal
tjaard/app/: Day01.hs  Main.hs  Utils.hs
tom/: Cargo.toml  LICENSE  aoc2024.cabal  sync.sh
vincent-de-comarmond/: .gitignore  README.org
(+187 files in other folders)
