cabal-version:      3.0
name:               aoc
version:            0.1.0.0
license:            NONE
author:             Tjaard du Plessis
maintainer:         tjaard123@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall

executable aoc
    import:           warnings
    main-is:          Main.hs
    other-modules:    Utils
                      Day01
    build-depends:    base ^>=4.17.2.1,
                      split ^>=0.2.3.4,
                      regex-pcre ^>=0.95.0.0,
                      MissingH ^>=1.6.0.1,
                      parsec >=3.1.17.0
    hs-source-dirs:   app
    default-language: Haskell2010
